@@ -1,3 +1,12 @@
+2008-11-12  Gavin Barraclough  <barraclough@apple.com>
+
+        Reviewed by Cameron Zwarich.
+
+        Test for https://bugs.webkit.org/show_bug.cgi?id=22201
+
+        * fast/js/pic/cached-array-length-access-expected.txt: Added.
+        * fast/js/pic/cached-array-length-access.html: Added.
+
 2008-11-12  Cameron Zwarich  <zwarich@apple.com>
 
         Rubber-stamped by Mark Rowe.
